[gd_scene load_steps=11 format=3 uid="uid://umhvunnf5ap3"]

[ext_resource type="Script" path="res://activity/scripts/GreenRect.gd" id="1_72a4m"]
[ext_resource type="FontFile" uid="uid://x68u5rsd0n4f" path="res://assets/fonts/Bungee-Regular.ttf" id="1_dkued"]
[ext_resource type="Texture2D" uid="uid://cx5vhbgqeyj1p" path="res://assets/icons/Vector.png" id="3_p05h3"]
[ext_resource type="Texture2D" uid="uid://thhkd2iyw3pa" path="res://assets/icons/twemoji_coin.png" id="4_hal3u"]
[ext_resource type="Texture2D" uid="uid://8oo68pnhcm0s" path="res://assets/icons/relogio.png" id="5_cqst0"]
[ext_resource type="Texture2D" uid="uid://bxyebhvqsxay4" path="res://assets/icons/Polygon 4.png" id="6_1hppx"]
[ext_resource type="Texture2D" uid="uid://cvg6kocg6j52r" path="res://assets/icons/‚ùî.png" id="7_8jxbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fa8tm"]
bg_color = Color(0.380392, 0.67451, 0.266667, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8y1ty"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3ah4"]
bg_color = Color(0.239216, 0.239216, 0.239216, 0.568627)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="GreenRect" type="Node2D"]
script = ExtResource("1_72a4m")

[node name="Panel" type="Panel" parent="."]
offset_right = 800.0
offset_bottom = 240.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fa8tm")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 19.0
offset_right = 775.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("1_dkued")
theme_override_font_sizes/font_size = 22
autowrap_mode = 3

[node name="PriceCoins" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 95.0
offset_right = 317.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("1_dkued")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="TimeToReady" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 143.0
offset_right = 343.0
offset_bottom = 166.0
theme_override_fonts/font = ExtResource("1_dkued")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="Numquestions" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 191.0
offset_right = 349.0
offset_bottom = 214.0
theme_override_fonts/font = ExtResource("1_dkued")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="City" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 521.0
offset_top = 97.0
offset_right = 768.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("1_dkued")
theme_override_font_sizes/font_size = 22
autowrap_mode = 3

[node name="Vector" type="Sprite2D" parent="Panel"]
position = Vector2(482, 108)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_p05h3")

[node name="TwemojiCoin" type="Sprite2D" parent="Panel"]
position = Vector2(46, 106)
scale = Vector2(0.14, 0.14)
texture = ExtResource("4_hal3u")

[node name="clock icon" type="Sprite2D" parent="Panel"]
position = Vector2(46, 155)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_cqst0")

[node name="ButtonPlay" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 461.0
offset_top = 168.0
offset_right = 696.0
offset_bottom = 224.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_dkued")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_8y1ty")
text = "     FAZER"
icon = ExtResource("6_1hppx")
expand_icon = true

[node name="134192InformationQuestionIcon" type="Sprite2D" parent="Panel"]
position = Vector2(46, 203)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_8jxbt")

[node name="UnavailablePanel" type="Panel" parent="."]
visible = false
offset_right = 800.0
offset_bottom = 240.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q3ah4")

[connection signal="pressed" from="Panel/ButtonPlay" to="." method="_on_button_play_pressed"]
